--- a/src/main/resources/web/styles.css
+++ b/src/main/resources/web/styles.css
@@ -62,3 +62,28 @@ div.leaflet-control-layers.coordinates {
   background-color: rgba(0,0,0,0.6);
   color: #ffffff;
 }
+#sidebar fieldset {
+  border: none;
+  border-top: 1px solid rgba(196,196,196,0.4);
+}
+#sidebar legend {
+  display: block;
+  margin: 0px 5px;
+}
+#sidebar #worlds {
+  margin: 10px 0px;
+}
+#sidebar #worlds a,
+#sidebar #worlds a:visited {
+  display: block;
+  color: #ffffff;
+  text-decoration: none;
+  padding: 5px 10px;
+}
+#sidebar #worlds a:hover {
+  background-color: rgba(0,0,0,0.25);
+}
+#sidebar #worlds a img {
+  vertical-align: middle;
+  padding-right: 15px;
+}
