--- a/src/main/resources/web/styles.css
+++ b/src/main/resources/web/styles.css
@@ -68,22 +68,31 @@ div.leaflet-control-layers.coordinates {
 }
 #sidebar legend {
   display: block;
-  margin: 0px 5px;
+  margin: 10px 5px;
 }
-#sidebar #worlds {
-  margin: 10px 0px;
+#sidebar fieldset {
+  margin: 15px 0px;
 }
-#sidebar #worlds a,
-#sidebar #worlds a:visited {
+#sidebar fieldset a,
+#sidebar fieldset a:visited {
   display: block;
   color: #ffffff;
   text-decoration: none;
   padding: 5px 10px;
 }
-#sidebar #worlds a:hover {
-  background-color: rgba(0,0,0,0.25);
+#sidebar fieldset a:hover {
+  background-color: rgba(255, 255, 255,0.15);
+  cursor: pointer;
 }
-#sidebar #worlds a img {
+#sidebar fieldset a img {
   vertical-align: middle;
   padding-right: 15px;
+  filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, 0.5));
+  -webkit-filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, 0.5));
+}
+#sidebar fieldset#players a {
+  padding: 10px 10px;
+}
+#sidebar fieldset a img {
+  padding-right: 10px;
 }
