--- a/src/main/resources/web/styles.css
+++ b/src/main/resources/web/styles.css
@@ -55,23 +55,31 @@ div.leaflet-control-layers.coordinates {
   position: absolute;
   top: 0px;
   right: 0px;
-  width: 200px;
+  width: 0px;
   height: 100vh;
   z-index: 10000;
   border-left: 1px solid #000000;
   background-color: rgba(0,0,0,0.6);
   color: #ffffff;
+  text-align: right;
+  transition: all 0.25s;
 }
 #sidebar fieldset {
+  clear: right;
+  margin: -20px 0px;
   border: none;
   border-top: 1px solid rgba(196,196,196,0.4);
+  text-align: left;
+  transition: all 0.25s;
+  white-space: nowrap;
+  word-wrap: none;
+}
+#sidebar fieldset#players {
+  margin: 30px 0px;
 }
 #sidebar legend {
   display: block;
   margin: 10px 5px;
-}
-#sidebar fieldset {
-  margin: 15px 0px;
 }
 #sidebar fieldset a,
 #sidebar fieldset a:visited {
@@ -79,6 +87,7 @@ div.leaflet-control-layers.coordinates {
   color: #ffffff;
   text-decoration: none;
   padding: 5px 10px;
+  transition: all 0.25s;
 }
 #sidebar fieldset a:hover {
   background-color: rgba(255, 255, 255,0.15);
@@ -95,4 +104,23 @@ div.leaflet-control-layers.coordinates {
 }
 #sidebar fieldset a img {
   padding-right: 10px;
+}
+#sidebar #handle {
+  float:left;
+  margin: 0px 0px 0px -15px;
+  width: 15px;
+  height: 100vh;
+  line-height: 100vh;
+  text-align: center;
+  background: inherit;
+  color: #999999;
+  transition: all 0.25s;
+}
+#sidebar #pin {
+  width: 16px;
+  height: 16px;
+  margin: 10px 5px;
+  padding: 2px 2px;
+  filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, 0.5));
+  -webkit-filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, 0.5));
 }
