--- a/plugin/src/main/resources/web/css/styles.css
+++ b/plugin/src/main/resources/web/css/styles.css
@@ -3,6 +3,13 @@ body {
   padding: 0;
   background: #000000;
 }
+ul,li {
+  list-style-type: none;
+  display: inline-block;
+  margin: 0px;
+  padding: 0px;
+  vertical-align: middle;
+}
 #map {
   width: 100%;
   height: 100vh;
@@ -23,9 +30,13 @@ div.leaflet-nameplate-pane div {
 div.leaflet-nameplate-pane div:before {
   border-color: transparent;
 }
-div.leaflet-nameplate-pane div img {
-  margin: -2px 5px 0 0;
+div.leaflet-nameplate-pane div img.head {
   vertical-align: middle;
+  margin-right: 6px;
+}
+div.leaflet-nameplate-pane div img.armor,
+div.leaflet-nameplate-pane div img.health {
+  display: block;
 }
 div.leaflet-nameplate-pane div,
 div.leaflet-marker-pane img {
