--- a/plugin/src/main/resources/web/css/styles.css
+++ b/plugin/src/main/resources/web/css/styles.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 0;
   background: #000000;
+  overflow: hidden;
 }
 ul, li {
   list-style-type: none;
@@ -71,7 +72,7 @@ div.leaflet-control-layers.coordinates {
   right: 0;
   width: 0;
   height: 100vh;
-  padding-left: 15px;
+  padding-left: 10px;
   z-index: 10000;
   font: 12px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
   border-left: 1px solid #000000;
@@ -93,8 +94,11 @@ div.leaflet-control-layers.coordinates {
   transition: all 0.25s;
   white-space: nowrap;
 }
+#sidebar fieldset#worlds {
+  margin: -15px 0 0 0;
+}
 #sidebar fieldset#players {
-  margin: -20px 0 0 0;
+  margin: 10px 0 0 0;
   overflow-y: auto;
 }
 #sidebar fieldset#players::-webkit-scrollbar {
@@ -150,9 +154,8 @@ div.leaflet-control-layers.coordinates {
   padding-right: 10px;
 }
 #sidebar #pin {
-  position: absolute;
-  top: 0;
-  right: 0;
+  position: relative;
+  right: -160px;
   width: 23px;
   height: 23px;
   margin: 5px 5px 10px 5px;
