Fix size of player head icons when using alternative head apis.

--- a/common/src/main/resources/web/css/styles.css
+++ b/common/src/main/resources/web/css/styles.css
@@ -35,6 +35,9 @@ div.leaflet-nameplate-pane div img.head {
   vertical-align: middle;
   margin-right: 6px;
 }
+img.head {
+    height: 16px;
+}
 div.leaflet-nameplate-pane div img.armor,
 div.leaflet-nameplate-pane div img.health {
   display: block;
