--- a/web/src/css/styles.css
+++ b/web/src/css/styles.css
@@ -1,175 +1,180 @@
 body {
-  margin: 0;
-  padding: 0;
-  background: #000000;
-  overflow: hidden;
+    margin: 0;
+    padding: 0;
+    background: #000000;
+    overflow: hidden;
 }
-ul, li {
-  list-style-type: none;
-  display: inline-block;
-  margin: 0;
-  padding: 0;
-  vertical-align: middle;
+ul,
+li {
+    list-style-type: none;
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    vertical-align: middle;
 }
 #map {
-  width: 100%;
-  height: 100vh;
-  background: black;
+    width: 100%;
+    height: 100vh;
+    background: black;
 }
 img.leaflet-tile {
-  image-rendering: pixelated;
-  image-rendering: -moz-crisp-edges
+    image-rendering: pixelated;
+    image-rendering: -moz-crisp-edges;
 }
 div.leaflet-nameplate-pane div {
-  background: rgba(0, 0, 0, 0.5);
-  color: #ffffff;
-  font-weight: 700;
-  padding: 2px 5px 1px;
-  margin: 0;
-  border-color: rgba(0, 0, 0, 0.75);
+    background: rgba(0, 0, 0, 0.5);
+    color: #ffffff;
+    font-weight: 700;
+    padding: 2px 5px 1px;
+    margin: 0;
+    border-color: rgba(0, 0, 0, 0.75);
 }
 div.leaflet-nameplate-pane div:before {
-  border-color: transparent;
+    border-color: transparent;
 }
 div.leaflet-nameplate-pane div img.head {
-  vertical-align: middle;
-  margin-right: 6px;
+    vertical-align: middle;
+    margin-right: 6px;
 }
 img.head {
-  height: 16px;
+    height: 16px;
 }
 div.leaflet-nameplate-pane div img.armor,
 div.leaflet-nameplate-pane div img.health {
-  display: block;
+    display: block;
 }
 div.leaflet-nameplate-pane div,
 div.leaflet-marker-pane img {
-  transition: all 0.25s;
+    transition: all 0.25s;
 }
 .leaflet-bottom.leaflet-left .link,
 .leaflet-bottom.leaflet-left .coordinates {
-  display: inline-block;
-  float: none;
+    display: inline-block;
+    float: none;
 }
 div.leaflet-control-layers.link img {
-  width: 34px;
-  height: 34px;
-  vertical-align: bottom;
-  bottom: 0;
-  background-image: url("../images/link.png");
-  background-size: 20px 20px;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
+    width: 34px;
+    height: 34px;
+    vertical-align: bottom;
+    bottom: 0;
+    background-image: url("../images/link.png");
+    background-size: 20px 20px;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
 }
 div.leaflet-control-layers.coordinates {
-  vertical-align: bottom;
-  padding: 2px 5px;
-  line-height: 14px;
-  height: 30px;
+    vertical-align: bottom;
+    padding: 2px 5px;
+    line-height: 14px;
+    height: 30px;
 }
 #sidebar {
-  display: flex;
-  flex-flow: column;
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 0;
-  height: 100vh;
-  padding-left: 10px;
-  z-index: 10000;
-  font: 12px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
-  border-left: 1px solid #000000;
-  background-color: rgba(0, 0, 0, 0.6);
-  color: #ffffff;
-  text-align: right;
-  transition: all 0.25s;
+    display: flex;
+    flex-flow: column;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 0;
+    height: 100vh;
+    padding-left: 10px;
+    z-index: 10000;
+    font:
+        12px/1.5 "Helvetica Neue",
+        Arial,
+        Helvetica,
+        sans-serif;
+    border-left: 1px solid #000000;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: #ffffff;
+    text-align: right;
+    transition: all 0.25s;
 }
 #sidebar.show {
-  width: 200px;
-  padding-left: 0;
+    width: 200px;
+    padding-left: 0;
 }
 #sidebar fieldset {
-  clear: right;
-  margin: 30px 0;
-  border: none;
-  border-top: 1px solid rgba(196, 196, 196, 0.4);
-  text-align: left;
-  transition: all 0.25s;
-  white-space: nowrap;
+    clear: right;
+    margin: 30px 0;
+    border: none;
+    border-top: 1px solid rgba(196, 196, 196, 0.4);
+    text-align: left;
+    transition: all 0.25s;
+    white-space: nowrap;
 }
 #sidebar fieldset#worlds {
-  margin: -15px 0 0;
+    margin: -15px 0 0;
 }
 #sidebar fieldset#players {
-  margin: 10px 0 0;
-  overflow-y: auto;
+    margin: 10px 0 0;
+    overflow-y: auto;
 }
 #sidebar fieldset#players::-webkit-scrollbar {
-  width: 6px;
+    width: 6px;
 }
 #sidebar fieldset#players::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 0;
+    -webkit-box-shadow: inset 0 0 0;
 }
 #sidebar fieldset#players::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, 0);
-  border-right: 2px solid rgba(112, 128, 144, 0.75);
-  border-radius: 1px;
+    background-color: rgba(0, 0, 0, 0);
+    border-right: 2px solid rgba(112, 128, 144, 0.75);
+    border-radius: 1px;
 }
 #sidebar fieldset#players::-webkit-scrollbar-thumb:hover {
-  border-radius: 3px;
-  border: 0;
-  background-color: rgba(112, 128, 144, 0.75);
+    border-radius: 3px;
+    border: 0;
+    background-color: rgba(112, 128, 144, 0.75);
 }
 #sidebar legend {
-  display: block;
-  margin: 10px 5px;
+    display: block;
+    margin: 10px 5px;
 }
 #sidebar fieldset a,
 #sidebar fieldset a:visited {
-  display: block;
-  color: #ffffff;
-  text-decoration: none;
-  padding: 5px 10px;
-  transition: all 0.25s;
+    display: block;
+    color: #ffffff;
+    text-decoration: none;
+    padding: 5px 10px;
+    transition: all 0.25s;
 }
 #sidebar fieldset a.following {
-  background-color: rgba(128, 128, 255, 0.25);
+    background-color: rgba(128, 128, 255, 0.25);
 }
 #sidebar fieldset a:hover,
 #sidebar fieldset a.following:hover {
-  background-color: rgba(255, 255, 255, 0.15);
-  cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.15);
+    cursor: pointer;
 }
 #sidebar fieldset a .other-world {
-  filter: brightness(50%) !important;
-  font-style: italic;
+    filter: brightness(50%) !important;
+    font-style: italic;
 }
 #sidebar fieldset a img {
-  vertical-align: middle;
-  padding-right: 10px;
-  filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.5));
-  -webkit-filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.5));
+    vertical-align: middle;
+    padding-right: 10px;
+    filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.5));
+    -webkit-filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.5));
 }
 #sidebar fieldset#players a {
-  padding: 10px;
+    padding: 10px;
 }
 #sidebar #pin {
-  position: relative;
-  right: -160px;
-  width: 23px;
-  height: 23px;
-  margin: 5px 5px 10px;
-  padding: 2px;
-  border: 1px solid rgba(255, 255, 255, 0);
-  filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.5));
-  -webkit-filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.5));
-  cursor: pointer;
+    position: relative;
+    right: -160px;
+    width: 23px;
+    height: 23px;
+    margin: 5px 5px 10px;
+    padding: 2px;
+    border: 1px solid rgba(255, 255, 255, 0);
+    filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.5));
+    -webkit-filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.5));
+    cursor: pointer;
 }
 #sidebar #pin.pinned:hover {
-  background: rgba(0, 128, 0, 0.5);
-  border: 1px solid rgba(0, 128, 0, 0.75);
+    background: rgba(0, 128, 0, 0.5);
+    border: 1px solid rgba(0, 128, 0, 0.75);
 }
 #sidebar #pin.unpinned:hover {
-  background: rgba(128, 0, 0, 0.5);
-  border: 1px solid rgba(128, 0, 0, 0.75);
+    background: rgba(128, 0, 0, 0.5);
+    border: 1px solid rgba(128, 0, 0, 0.75);
 }
